# web-quotation-management

./: .gitignore  Dockerfile  alembic.ini  blacklist.txt  locustfile.py  main.py  pyproject.toml
.github/workflows/: python-app.yml
api/: dependencies.py
api/v1/: __init__.py  auth.py  client.py  custom_product.py  faq.py  notice.py  past_order.py  product.py  quotation.py  statistic.py
core/: config.py  middleware.py  security.py  settings.py  utils.py
core/db/: database.py  redis.py
core/decorator/: decorator.py
core/logging/: config.py
core/response/: api_response.py
core/response/code/: base_code.py  error_status.py  success_status.py
core/response/handler/: exception_handler.py
migrations/: env.py
migrations/versions/: 0d1ef25adbeb_quotation_update2.py  1ab3f1aa2caa_quotation_add_name.py  302e0e36db36_user_attribute_nullable.py  35d737652d42_faq_init.py  3e07f3420165_quotation_update3.py  3f455f8f535c_client_quotation_problem_solving.py  425d363826ae_quotation_particulars_add.py  49ffac8b9ece_users_entity.py  4c4731b47610_quotation_product.py  4e72c9e0a4da_quotation_add_attribute_input_date.py  578bb33ae6c4_user_is_admin_attribut_add.py  5f1cfc3c5823_custom_product_init.py  61275459cf4d_notice_init.py  661090326e33_client_quotation2.py  6ac556ada880_update_product.py  6b5726a4f404_client_quotation4.py  78fe9cd1ee03_init.py  87c3fb06dbec_quotation_product_back.py  917f80ed72ea_client_quotation.py  95e8c19cadf6_client_add_attribute_comment.py  9e337d0b1ae9_product_date_update.py  a2c0b876ac17_client_quotation3.py  bbbaae3ea7d3_client_migration.py  c804fdf65b84_quotation_loading_update.py  d1532654eb09_quotation_status_add.py  d17fca85a59b_past_orders_init.py  e002cbabdccc_client_comment_nullable.py  e41d40cba835_user_client_relationship.py  e756f75af337_quotation_product.py  e80c0399184b_quotation_update.py  e886d6e60db5_quotation_product.py  e9804b73acc0_quotation_loading_update2.py
models/: FAQ.py  __init__.py  client.py  custom_product.py  notice.py  past_order.py  product.py  quotation.py  quotation_product.py  user.py
repository/client/: client.py
repository/custom_product/: custom_product.py
repository/faq/: faq.py
repository/notice/: notice.py
repository/past_order/: past_order.py
repository/product/: product.py
repository/quotation/: quotation.py  quotation_product.py
repository/statistic/: statistic.py
repository/user/: user.py
schemas/: auth.py  client.py  custom_product.py  faq.py  kamis.py  notice.py  past_order.py  product.py  quotation.py  statistic.py  user.py
service/: client.py  custom_product.py  discord.py  faq.py  kakao.py  kamis.py  notice.py  past_order.py  product.py  quotation.py  statistic.py  tmap.py  user.py
tests/: test_exception_handlers.py  test_kamis_service.py
