[tool.poetry]
name = "web-quotation"
version = "0.1.0"
description = ""
authors = ["YPYP333YPYP <ypyp333ypyp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
sqlalchemy = "^2.0.28"
pydantic = "^2.6.3"
alembic = "^1.13.1"
pydantic-settings ="^2.2.1"
starlette = "^0.36.3"
pandas = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
