[tool.poetry]
name = "web-quotation-management"
version = "0.1.0"
description = ""
authors = ["YPYP333YPYP <ypyp333ypyp@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
aiomysql = "^0.2.0"
aioredis = "^2.0.1"
alembic = "^1.13.1"
annotated-types = "^0.6.0"
anyio = "^4.3.0"
async-timeout = "^4.0.3"
bcrypt = "^4.1.3"
certifi = "^2024.2.2"
cffi = "^1.16.0"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
colorama = "^0.4.6"
cryptography = "^42.0.8"
dnspython = "^2.6.1"
ecdsa = "^0.19.0"
email_validator = "^2.2.0"
et-xmlfile = "^1.1.0"
fastapi = "^0.110.0"
fuzzywuzzy = "^0.18.0"
greenlet = "^3.0.3"
h11 = "^0.14.0"
idna = "^3.6"
Levenshtein = "^0.25.1"
Mako = "^1.3.2"
MarkupSafe = "^2.1.5"
mysql-connector-python = "^8.3.0"
mysqlclient = "^2.2.4"
numpy = "^1.26.4"
openpyxl = "^3.1.2"
pandas = "^2.2.1"
passlib = "^1.7.4"
pyasn1 = "^0.6.0"
pycparser = "^2.22"
pydantic = "^2.6.4"
pydantic-core = "^2.16.3"
pydantic-settings = "^2.2.1"
PyMySQL = "^1.1.0"
python-dateutil = "^2.9.0"
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
python-Levenshtein = "^0.25.1"
python-multipart = "^0.0.9"
pytz = "^2024.1"
rapidfuzz = "^3.9.3"
redis = "^5.0.7"
requests = "^2.31.0"
rsa = "^4.9"
six = "^1.16.0"
sniffio = "^1.3.1"
SQLAlchemy = "^2.0.28"
starlette = "^0.36.3"
typing-extensions = "^4.10.0"
tzdata = "^2024.1"
urllib3 = "<2.0"
uvicorn = "^0.28.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]